# random-stuff

./: .gitignore  README.md  _config.yml  comparison.md
bq_caapi_ge/: .env.example  .gitignore  AGENTS.md  DEBUG.md  Dockerfile  README.md  SESSION_NOTES.md  pyproject.toml  requirements.txt
bq_caapi_ge/advanced/: README.md  __init__.py
bq_caapi_ge/advanced/app/certified_analytics/: agent.py
bq_caapi_ge/advanced/app/orders/: agent.py
bq_caapi_ge/advanced/app/semantic_analytics/: agent.py
bq_caapi_ge/advanced/docs/examples/: chart_with_ca_api.py
bq_caapi_ge/advanced/scripts/: deploy_agents.sh  setup_auth.py
bq_caapi_ge/advanced/test_web/: README.md  app.py
bq_caapi_ge/advanced/test_web/templates/: chat.html  index.html
bq_caapi_ge/app/: bridge.py
bq_caapi_ge/app/inventory/: agent.py
bq_caapi_ge/app/orders/: agent.py
bq_caapi_ge/config/: __init__.py  agent_definitions.py
bq_caapi_ge/config/semantic_contracts/: thelook_inventory.yaml  thelook_orders.yaml
bq_caapi_ge/docs/: adk_semantic_layer_plan.md
bq_caapi_ge/docs/examples/: chart_with_ca_api.py
bq_caapi_ge/docs/reference/: intro_gemini_data_analytics_sdk.ipynb  intro_gemini_data_analytics_sdk.py  links.md
bq_caapi_ge/scripts/: admin_tools.py  cleanup_and_list.py  deploy_agents.sh  enrich_bigquery_metadata.py  final_verify.sh  register_agents.py  register_ge_agents.py  setup_auth.py
bq_caapi_ge/semantic/: __init__.py  catalog.py  catalog_runtime.py  compiler.py  context.py  execution.py  executor.py  grounding.py  join_planner.py  registry.py  runtime.py  sql_policy.py  sql_runtime.py  types.py
bq_caapi_ge/test_web/: README.md  app.py
bq_caapi_ge/test_web/static/: style.css
bq_caapi_ge/test_web/templates/: chat.html  index.html
bq_caapi_ge/tests/: test_adk_workflow_compatibility.py  test_bridge.py  test_certified_analytics_agent.py  test_enrich_bigquery_metadata.py  test_semantic_analytics_agent.py  test_semantic_catalog.py  test_semantic_compiler.py  test_semantic_context.py  test_semantic_executor.py  test_semantic_grounding.py  test_semantic_sql.py  test_web_app.py
bq_data_product/: .env.example  README.md  create_data_products.py  pyproject.toml
bq_discovery/: .gitignore  AGENTS.md  README.md  pyproject.toml
bq_discovery/bq_discovery/: __init__.py  acl_scanner.py  cli.py  iam_scanner.py  models.py  scanner.py
bq_discovery/bq_discovery/resolvers/: groups.py  projects.py
bq_discovery/src/bq_discovery/: __main__.py  acl_scanner.py  cli.py  iam_scanner.py  models.py  scanner.py
bq_discovery/src/bq_discovery/resolvers/: projects.py
bq_discovery/tests/: test_acl_scanner.py  test_cli.py  test_groups.py  test_iam_scanner.py  test_models.py  test_scanner.py
bq_firebase/: .env.example  README.md  README_DEMO.md  firebase_analytics_demo.ipynb  pyproject.toml
bq_firebase/web_login_demo/: app.py  config.py
bq_firebase/web_login_demo/static/css/: style.css
bq_firebase/web_login_demo/static/js/: app.js
bq_firebase/web_login_demo/templates/: index.html  success.html
bq_spark_serverless_etl/: .gitignore  Makefile  README.md  pyproject.toml
bq_spark_serverless_etl/configs/demo/: demo_cluster.yaml  order_items.yaml  orders.yaml  users.yaml
bq_spark_serverless_etl/configs/examples/: postgres_to_bq.yaml  postgres_to_bq_incremental.yaml  sample_cluster.yaml
bq_spark_serverless_etl/examples/: README.md  quickstart.ipynb
bq_spark_serverless_etl/infra/: setup.sh  teardown.sh
bq_spark_serverless_etl/pipeline/: __init__.py  config.py  main.py  registry.py
bq_spark_serverless_etl/pipeline/extractors/: __init__.py  base.py  postgres.py
bq_spark_serverless_etl/pipeline/writers/: __init__.py  base.py  bigquery.py
bq_spark_serverless_etl/scripts/: seed_data.py
bq_spark_serverless_etl/sql/: create_stored_procedures.sql  demo_pipeline.sql
bq_spark_serverless_etl/tests/: test_config.py  test_postgres_extractor.py  test_registry.py
bq_streaming_cdc/: AGENTS.md  README.md  create_table.py  pyproject.toml  run_demo.sh  stream_cdc.py
dbt_migration_agents/: .gitignore  .user.yml  AGENTS.md  CHANGELOG.md  HISTORY.md  README.md  configure.py  dbt-migration-agent-enhancement-analysis.md  pyproject.toml  requirements.txt
dbt_migration_agents/.agents/agents/: dbt_lineage_generator.md  lineage_analyzer.md  migration_cookbook_generator.md  prd_generator.md  validation_subagent.md
dbt_migration_agents/.agents/commands/: migration_workflow.md
dbt_migration_agents/.claude/agents/: dbt_lineage_generator.md  lineage_analyzer.md  migration_cookbook_generator.md  prd_generator.md  validation_subagent.md
dbt_migration_agents/.github/workflows/: dbt_ci_validation.yml
dbt_migration_agents/code_refactor/: DBT_MIGRATION_COOKBOOK_TEMPLATE.md
dbt_migration_agents/config/: __init__.py  config_loader.py  migration_config.example.yaml
dbt_migration_agents/docs/: CUSTOMIZATION.md  QUICK_START_DEMO.md  SETUP_GUIDE.md  ci_cd_workflow.md
dbt_migration_agents/lineage_analyzer/: LINEAGE_ANALYZER_COOKBOOK.md
dbt_migration_agents/lineage_analyzer/dataplex_based/: analyze_bq_lineage.py
dbt_migration_agents/lineage_analyzer/dbt_based/: analyze_dbt_lineage.py
dbt_migration_agents/migration_validator/: VALIDATION_COOKBOOK.md
dbt_migration_agents/prd_generator/: PRD_GENERATOR_COOKBOOK.md
dbt_migration_agents/sample_project/: README.md  dbt_project.yml  profiles.yml.example
dbt_migration_agents/sample_project/macros/: generate_schema_name.sql
dbt_migration_agents/sample_project/models/bronze/: _bronze_schema.yml  raw_customers.sql  raw_orders.sql  raw_products.sql
dbt_migration_agents/sample_project/models/gold/: _gold_schema.yml  dim_customers.sql  dim_products.sql  fct_orders.sql  fct_orders_broken.sql
dbt_migration_agents/sample_project/models/silver/: _silver_schema.yml  int_orders_cleaned_broken.sql  int_orders_enriched_broken.sql  int_orders_final_broken.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  (+1 more)
dbt_migration_agents/sample_project/seeds/: country_codes.csv
dbt_migration_agents/scripts/: ci_validation_runner.py  setup_profile.py  simulate_pr.py
(+189 files in other folders)
