[project]
name = "bq-caapi-ge"
version = "0.2.0"
description = "Conversational Analytics API agents with Gemini Enterprise integration"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-geminidataanalytics>=0.9.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
advanced = [
    "google-adk>=2.0.0",
    "google-cloud-bigquery>=3.42.2",
    "google-cloud-dataplex>=2.13.0",
    "sqlglot>=27.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.14",
]
