[project]
name = "firebase-analytics-demo"
version = "0.1.0"
description = "Firebase Analytics BigQuery Demo with 10 Progressive Examples"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.25.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "db-dtypes>=1.2.0",
]

[dependency-groups]
dev = []
