[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-migration-agents"
version = "2.0.0"
description = "Generic framework for migrating DBT staging models to gold layer using OpenCode agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
lineage = [
    "google-cloud-datacatalog-lineage>=0.2.0",
]
dev = [
    "pytest>=7.0",
    "pip-audit>=2.0",
    "dbt-bigquery>=1.5.0",
]

[project.scripts]
dbt-lineage = "lineage_analyzer.dbt_based.analyze_dbt_lineage:main"
bq-lineage = "lineage_analyzer.dataplex_based.analyze_bq_lineage:main"
migration-setup = "configure:main"

[tool.setuptools.packages.find]
include = ["config*", "lineage_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88
